# ScreenCapture

./: CMakeLists.txt  README.md  rectangle_capture.cpp  rectangle_capture.h  stb_image_write_impl.cpp
.github/workflows/: release.yml
